TODO
- dans Group Module ajouter methodes retournant
  - Map<groupName,parameterName> : names of parameters used by a group
  - Map<groupName,PDLParameter> : parameters used by a group
 

v0.5 2013-04-23 
- added dialog for creating a AtomicParameter Expression
- added dialog for creating a ParenthesisContent Expression
- added dialog for creating a Function

v0.4 2013-04-22 
- usage of TreeMap<String, PDLStatement> for storage of statements

v0.3 2013-03-01 
- replaced reached by reachedInf and reachedSup in PDLCriterion, CriterionDialog
- usage of TreeMap<String, Criterion> for storage of criterions
  
v0.2 2013-02-21 
- added CMZ as author in the about box
- new button + dialog for creating AtomicConstantExpression
- new dialog for creating/modifying a parameter
- using Expression class from net.ivoa.parameter.model

v0.1 2013-02-20 
- initial revision checked into google code SVN repository